# 3-langs-playground

./: README.md
clojure/: CHANGELOG.md  README.md  project.clj
clojure/.calva/output-window/: output.calva-repl
clojure/.lsp/: sqlite.db
clojure/doc/: intro.md
clojure/src/github_starts/: core.clj
clojure/test/github_starts/: core_test.clj
go/: go.mod  main.go
rust/: Cargo.toml
rust/src/: main.rs
